# ChangeLog for media-libs/hamlib
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/hamlib/ChangeLog,v 1.59 2011/04/25 21:24:10 arfrever Exp $

  25 Apr 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  hamlib-1.2.12-r2.ebuild, hamlib-1.2.13.ebuild:
  Fix deprecation warnings.

*hamlib-1.2.13 (21 Mar 2011)

  21 Mar 2011; Thomas Beierlein <tomjbe@gentoo.org> -hamlib-1.2.12.ebuild,
  -hamlib-1.2.12-r1.ebuild, +hamlib-1.2.13.ebuild:
  Version bump. Remove old versions.

  27 Feb 2011; Tobias Klausmann <klausman@gentoo.org> hamlib-1.2.12-r2.ebuild:
  Stable on alpha, bug #333603

  22 Feb 2011; Markos Chandras <hwoarang@gentoo.org> hamlib-1.2.12-r2.ebuild:
  Stable on amd64 wrt bug #333603

  21 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  hamlib-1.2.12-r2.ebuild:
  x86 stable wrt bug #333603

  22 Dec 2010; Thomas Beierlein <tomjbe@gentoo.org> hamlib-1.2.12-r2.ebuild:
  Fix last python related changes a suggested by Arfrever

*hamlib-1.2.12-r2 (22 Dec 2010)

  22 Dec 2010; Thomas Beierlein <tomjbe@gentoo.org> +hamlib-1.2.12-r2.ebuild:
  Verify and potentially improve Python-related code, #313257

*hamlib-1.2.12-r1 (21 Dec 2010)

  21 Dec 2010; Thomas Beierlein <tomjbe@gentoo.org> +hamlib-1.2.12-r1.ebuild:
  Drop unneeded .la files

  10 Oct 2010; Tobias Klausmann <klausman@gentoo.org> hamlib-1.2.11.ebuild:
  Stable on alpha, bug #333603

*hamlib-1.2.12 (10 Sep 2010)

  10 Sep 2010; Thomas Beierlein <tomjbe@gentoo.org> -hamlib-1.2.9.ebuild,
  +hamlib-1.2.12.ebuild, -files/hamlib-ltdl.diff,
  -files/hamlib-pkgconfig-fix.diff:
  Version bump. Drop old version and related patches

  21 Aug 2010; Markos Chandras <hwoarang@gentoo.org> hamlib-1.2.11.ebuild:
  Stable on amd64 wrt bug #333603

  21 Aug 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> hamlib-1.2.11.ebuild:
  x86 stable wrt bug #333603

*hamlib-1.2.11 (05 Jun 2010)
