@@ -7,26 +7,18 @@ DIST hamlib-1.2.10.tar.gz 1799309 RMD160 7e5e887e9e1188b19157e76f88b40b3bf7c157a
 DIST hamlib-1.2.11.tar.gz 1846225 RMD160 795071afc4cfc0952c46e866e82e9c22225b7199 SHA1 775c562b7c327303ec31fc49eb09766fd7517b2e SHA256 9687a94a6cb9cee7e3daa12630f36a7ce64c9024d58fb3880b4842253fa26147
 DIST hamlib-1.2.12.tar.gz 1860387 RMD160 9216b1801b458968d299d4c4e2141a4b15df04d2 SHA1 94115df13eae3e1046911cce585503ff49a8dcbd SHA256 735782ecd83de4036cef7dfcc87eac5095420406bd0ac2262d967e808c2d108c
 DIST hamlib-1.2.13.tar.gz 1643495 RMD160 71089726a1d43b5829d98681872d9c9f152e82f9 SHA1 33c44d0c371e0ad0c9cb3852e383adbf986de6e7 SHA256 5945b15e56ae6f39fdf70f4fe4936f0a5bed3f103750d0ddb7ab79ef7e9331af
-EBUILD hamlib-1.2.10.ebuild 2002 RMD160 b677cf37d3e7d0560313353fa13b7ddd780466ae SHA1 02657809c0c7e9defe9305cade66c08cca006afe SHA256 b857aa531c38ba3900a452b7d9b8420e8488bb63217ef0abed82a17f74949110
-EBUILD hamlib-1.2.11.ebuild 1786 RMD160 8aa35a9607db0be4a8bf2c95f813457201f13c45 SHA1 d1aba3f23305f1fa5b8d21ca7a3500a37f460414 SHA256 aa80ca3375598e3a0c5c72ddc5afd9f5a5bd26e97135973e9c06d6ad0c9f9891
-EBUILD hamlib-1.2.12-r2.ebuild 2034 RMD160 0194b68fdecf80fdb704da33d8a7e889029bbc64 SHA1 76d5075704b741aa459bdf5835530dfda468b548 SHA256 6f46555b7ccd3dde5819d1879f94db83abd634c4c48940f4ee7359f1ea170ced
-EBUILD hamlib-1.2.13.ebuild 2034 RMD160 df72597d60dde7c31a55287b2d912090436c2e84 SHA1 f7b78e374d9ed21c77f18d97bca9d33899610fae SHA256 a73dacb7f60354e8207252510d4ae6344ab90f56e2b0e1a36c541d33a6eaac21
-MISC ChangeLog 9384 RMD160 62b769765730076adbfbcd066b74132a99391072 SHA1 03caad14a510da4e9d1334d0286518d791fd6093 SHA256 3b3d0fdd380e241a6cc3d54c172f1459e56d1b505d3942e69a80cbb83753f860
+EBUILD hamlib-1.2.10.ebuild 2003 RMD160 2221f9f359cb3bf0ddcf4a087d88447e1b5be861 SHA1 4f629a1fdd3e02713882f055e3c6b0dcbb0caf99 SHA256 af4ba5d2acb3032613f13abbd3bb499af339ae24f9574956f680b603ef008f55
+EBUILD hamlib-1.2.11.ebuild 1783 RMD160 a90f26c13aa1f6d03ae0ea7e58e92b891f33aebd SHA1 6b2ae50062675b9b56e3343c95b164609463c552 SHA256 9c288938475d56aa2e4e66728ea7d0dd38a78a9bd575175b58c10c8fe083e5b2
+EBUILD hamlib-1.2.12-r2.ebuild 2031 RMD160 94fe5dfdf502547cb57640579e0259fd2d1936ac SHA1 e6d6ea5f5377a7ce05e9b8185d12773dce7bd2d6 SHA256 0a72a6f4b47d9f7a49104faaf38de47d5ac2529b27378c4ff9930640f08915fe
+EBUILD hamlib-1.2.13.ebuild 2031 RMD160 eb771748c9f19d3a58dea360a5c4f4e04ab98b0e SHA1 323fc347ac53a8e8b42fe26a7be38eb0c500949f SHA256 b7dc692cc4d6d157281a3c27f5a93476c34468bb5b068eded25c0f07d599a85b
+MISC ChangeLog 9557 RMD160 1e15a7ecf6fde3cb3b547238532e1daeab4d45d1 SHA1 12804cd8e8793a7f4aacb959bb41a06c502fc8ee SHA256 cd4e382df4f998e28d6188059ec753219466688b077b97fe37c0aea15e450ae3
 MISC metadata.xml 257 RMD160 c6f05f5951c1ad7388dd56f4abe0ccdbe23505dd SHA1 e31f6d71d2344810cca782e2accf9058eeb2c1fd SHA256 e52fb7be2e8c1ca2b7ce0066517558a34ee01c9e6340e0a31a053594b9077eda
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQIcBAEBAgAGBQJNteaIAAoJENgZr6v6gHY0uisQALdVWROc0h3i9X2EoTyQrhX8
-5xQOersvWOxM7A25VNNhX1Tuw5y+0fMgQJcKWchAPnQANwDv9aAgpoE8uZ/VLK9n
-MFotf4WcbIE2F/X/Yai1+twQ9pqKq1kOFFhSPnT20jsdESeGBy57tElI2Z5JBeda
-UlfDpGMRIPwBlxes8WgFJSAcI2mBHweZN9xb/0MPBn7fdN6DKBsy+vpPVIEFU3d5
-Toiu0yArV3LSSNwIoJY25NSbkCMWJ0TuemBO0euZLUGXixjjBk7xOnpmz6yXQsIG
-kfw/KXVG9yZVqOOB82bMNr1FouirYV2nvhz9LVojvAlAvItg+dIekOVr5xbJwXPE
-hP2xqn9pKdBXU9r4yMujS8lcw4fyksaKd16+oL4hOHXxAKo5NsizEfGQjR1ifwPU
-Aw2XP0QQ+/BIl0c2Thfl4oq03WEIu3DnilLYvsRTsrF6+7C957kuWXH4UPN3L+Nb
-UCrvx36Bf14D3ohJ7F84KZKWDuCOMVg03vUFfh+Wzcvr+z16zYIr1Ht981Ln31uc
-PR7PT5sQM9nh8UMqE5DCVWQHUOxnQqNRhxS/KBrXfoPqGG7F0A+/VMHYDcdJsH23
-6yRc0lcrGLO7eL42h0lBYkKkVz+6Dn9L0W5vkQ8VNbsRzwMjGJ8dcJzmjYf6DMiu
-A6LRORZbBV3qE5C6kLVK
-=V1WV
+iJwEAQECAAYFAk5FmAcACgkQIiMqcbOVdxSbtwP9HvNcbr7w5NtYI42DDubaJWT5
+YFddeee7AqtkSlpQteLXoeJUkm+G7mln3loaAEOgvfFWagh7jlO9X3DQPJbQBA6U
+MnT9auRNJf7Otlmn6dl4vyhXRPaNv2+uR62MG4TGaLl4LOWyOdr6OGAxRB/cFP4s
+G9DZe4pKTDTr9Z9m9Lw=
+=zmh+
 -----END PGP SIGNATURE-----
