@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/hamlib/hamlib-1.2.13.ebuild,v 1.2 2011/04/25 21:24:10 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/hamlib/hamlib-1.2.13.ebuild,v 1.3 2011/08/12 21:15:44 xarthisius Exp $
 
 EAPI="3"
 PYTHON_DEPEND="python? 2"
@@ -13,7 +13,7 @@ SRC_URI="mirror://sourceforge/${PN}/${P}.tar.gz"
 
 LICENSE="LGPL-2 GPL-2"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~ppc ~x86 ~x86-fbsd"
+KEYWORDS="~alpha ~amd64 ~x86 ~x86-fbsd"
 IUSE="doc python tcl"
 
 RESTRICT="test"
