@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/hamlib
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/hamlib/ChangeLog,v 1.59 2011/04/25 21:24:10 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/hamlib/ChangeLog,v 1.60 2011/08/12 21:15:44 xarthisius Exp $
+
+  12 Aug 2011; Kacper Kowalik <xarthisius@gentoo.org> hamlib-1.2.10.ebuild,
+  hamlib-1.2.11.ebuild, hamlib-1.2.12-r2.ebuild, hamlib-1.2.13.ebuild:
+  Drop ppc wrt #333603
 
   25 Apr 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
   hamlib-1.2.12-r2.ebuild, hamlib-1.2.13.ebuild:
